* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 1.0.6-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 1.0.6-0
- Update systemd fixtures and CI assets
- Add support for Puppet 5 and OEL

* Fri Feb 16 2018 Liz Nemsick <liz.nemsick-simp@gmail.com> - 1.0.5-0
- Update upper range of puppet/grafana module dependency to < 5.0.0
- Update README to include section on rubygem-puppetserver-toml

* Wed Jul 12 2017 Liz Nemsick <liz.nemsick-simp@gmail.com> - 1.0.4-0
- Workaround 2-pass grafana rpm install issue in acceptance tests
- Update README to reflect SIMP 6 global catalysts.

* Tue May 09 2017 Liz Nemsick <liz.nemsick-simp@gmail.com> - 1.0.4-0
- Update to latest Grafana (4.2.0) and Elasticsearch (5.4.0)
- simp_grafana::version now defaults to 'latest'
- Confine puppet version in metadata.json

* Fri Mar 23 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.3-0
- Fixed the Beaker tests

* Thu Mar 09 2017 Liz Nemsick <liz.nemsick-simp@gmail.com> - 1.0.2-0
- Update grafana GPG key used in acceptance test

* Mon Jan 23 2017 Nick Miller <nick.miller@onyxpoint.com>, Jeanne Greulich <jeannegreulich@onyxpoint.com> - 1.0.1-0
- Update module for Puppet 4
- Strong type module
- Update dependencies

* Thu Dec 02 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.1-0
- Removed pupmod-simp-sysctl in favor of augeas-sysctl

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 1.0.0-0
- Update major version for SIMP 6

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> Nick Markowski <nmarkowski@keywcorp.com> - 0.1.2-0
- Updated iptables dependency version
- Removed vagrant-wrapper from the gemfile

* Sun Sep 25 2016 Ralph Wright <rwright@onyxpoint.com> - 0.1.1-0
- A few minor fixes for seemless install
- Added option to install SIMP dashboards
- Added option to allow SIMP dashboards to be installed
