@@ -1,15 +1,18 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
 #
-# https://puppet.com/docs/pe/2017.3/overview/component_versions_in_recent_pe_releases.html
+# https://puppet.com/docs/pe/latest/overview/component_versions_in_recent_pe_releases.html
 # https://puppet.com/misc/puppet-enterprise-lifecycle
-# https://puppet.com/docs/pe/2017.3/overview/getting_support_for_pe.html#standard-releases-and-long-term-support-releases
+# https://puppet.com/docs/pe/latest/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2016.4   4.7   2.1.9  2018-10  (LTS)
-# SIMP6.0.0   4.8   2.1.9  TBD
-# PE 2017.2   4.10  2.1.9  2018-02-21
-# PE 2017.3   5.3   2.4.1  2018-07
-# PE 2018.1   ???   ?????  ????-??  (LTS)
+# Release       Puppet   Ruby   EOL
+# PE 2016.4.15  4.10.12  2.1.9  2018-12 (LTS)
+# SIMP 6.0      4.8.2    2.1.9  TBD
+# SIMP 6.1      4.10.6   2.1.9  TBD
+# SIMP 6.2      4.10.12  2.1.9  TBD
+# SIMP 6.3      5.5.7    2.4.4  TBD***
+# PE 2018.1     5.5.6    2.4.4  2020-05 (LTS)***
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
 ---
 .cache_bundler: &cache_bundler
   cache:
@@ -61,58 +64,7 @@ stages:
   - acceptance
   - deploy
 
-# Puppet 4.7 for PE 2016.4 LTS Support (EOL: 2018-10-21)
-# See: https://puppet.com/misc/puppet-enterprise-lifecycle
-# --------------------------------------
-pup4_7-validation:
-  stage: validation
-  tags:
-    - docker
-  image: ruby:2.1
-  variables:
-    PUPPET_VERSION: '~> 4.7.0'
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *validation_checks
-
-pup4_7-unit:
-  stage: unit
-  tags:
-    - docker
-  image: ruby:2.1
-  variables:
-    PUPPET_VERSION: '~> 4.7.0'
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *spec_tests
-
-
-# Puppet 4.8 for SIMP 6.0 + 6.1 support
-# --------------------------------------
-pup4_8-validation:
-  stage: validation
-  tags:
-    - docker
-  image: ruby:2.1
-  variables:
-    PUPPET_VERSION: '~> 4.8.0'
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *validation_checks
-
-pup4_8-unit:
-  stage: unit
-  tags:
-    - docker
-  image: ruby:2.1
-  variables:
-    PUPPET_VERSION: '~> 4.8.0'
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *spec_tests
-
-
-# Puppet 4.10 for PE 2017.2 support (EOL:2018-02-21)
+# Puppet 4.10 for 2016.4.15  support (EOL:2018-12)
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
 # --------------------------------------
 pup4_10-validation:
@@ -138,27 +90,27 @@ pup4_10-unit:
   <<: *spec_tests
 
 
-# Puppet 5.3 for PE 2017.3 support (EOL: 2018-07)
+# Puppet 5.5.6 for PE 2018.1 support (EOL:2020-05)
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
 # --------------------------------------
-pup5_3-validation:
+pup5_5_6-validation:
   stage: validation
   tags:
     - docker
   image: ruby:2.4
   variables:
-    PUPPET_VERSION: '~> 5.3.0'
+    PUPPET_VERSION: '5.5.6'
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *validation_checks
 
-pup5_3-unit:
+pup5_5_6-unit:
   stage: unit
   tags:
     - docker
   image: ruby:2.4
   variables:
-    PUPPET_VERSION: '~> 5.3.0'
+    PUPPET_VERSION: '5.5.6'
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *spec_tests
@@ -199,12 +151,12 @@ default:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 4.10.4'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
 
 default-puppet5:
   stage: acceptance
@@ -213,29 +165,44 @@ default-puppet5:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '~> 5.3'
-    PUPPET_BEAKER_COLLECTION: 'puppet5'
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
 
-default-fips:
+default-centos6-puppet5:
   stage: acceptance
   tags:
     - beaker
   <<: *cache_bundler
   <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
+  script:
+    - bundle exec rake spec_clean
+    - bundle exec rake beaker:suites[default,centos-6-x64]
+  # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
+  #allow_failure: true
+
+default-puppet5-fips:
+  stage: acceptance
+  tags:
+    - beaker
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  variables:
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
     BEAKER_fips: 'yes'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
 
 default-oel:
   stage: acceptance
@@ -245,12 +212,12 @@ default-oel:
   <<: *setup_bundler_env
   <<: *only_with_SIMP_FULL_MATRIX
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 4.10.4'
   script:
     - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
+    - bundle exec rake beaker:suites[default,oel-7-x64]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
 
 default-oel-puppet5:
   stage: acceptance
@@ -258,17 +225,31 @@ default-oel-puppet5:
     - beaker
   <<: *cache_bundler
   <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
   variables:
-    PUPPET_VERSION: '~> 5.3'
-    PUPPET_BEAKER_COLLECTION: 'puppet5'
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
   script:
     - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
+    - bundle exec rake beaker:suites[default,oel-7-x64]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
 
-default-oel-fips:
+default-oel6-puppet5:
+  stage: acceptance
+  tags:
+    - beaker
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  variables:
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
+  script:
+    - bundle exec rake spec_clean
+    - bundle exec rake beaker:suites[default,oel-6-x64]
+  # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
+  #allow_failure: true
+
+default-oel-puppet5-fips:
   stage: acceptance
   tags:
     - beaker
@@ -276,10 +257,11 @@ default-oel-fips:
   <<: *setup_bundler_env
   <<: *only_with_SIMP_FULL_MATRIX
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 5.5'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
     BEAKER_fips: 'yes'
   script:
     - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
+    - bundle exec rake beaker:suites[default,oel-7-x64]
   # The acceptance tests fail due to https://simp-project.atlassian.net/browse/SIMP-4032
-  allow_failure: true
+  #allow_failure: true
