@@ -9,19 +9,8 @@ describe 'The fake SIMP server' do
   before(:all) do
     default_hieradata     = ERB.new(File.read(File.join(FIXTURE_DIR, 'hieradata', 'default.yaml.erb'))).result(binding)
     simp_server_hieradata = ERB.new(File.read(File.join(FIXTURE_DIR, 'hieradata', 'simp_server.yaml.erb'))).result(binding)
-
-    # NOTE: The `context` terminus is for per-context blocks.  If used, be sure
-    # it is filled with an empty YAML document (`---\n`) in the `after(:all)`
-    # hook for the context so it doesn't effect subsequent contexts.
-    write_hiera_config_on simp_server, %W(context #{fqdn} default)
-
-    write_hieradata_to simp_server, default_hieradata, 'default'
-    write_hieradata_to simp_server, simp_server_hieradata, fqdn
-    write_hieradata_to simp_server, "---\n", 'context'
-
-    hosts.each do |host|
-      on(host, 'ifup eth1')
-    end
+    data = YAML.load(default_hieradata).merge(YAML.load(simp_server_hieradata))
+    write_hieradata_to(simp_server, data)
   end
 
   let(:simp_server_manifest) { File.open(File.join(FIXTURE_DIR, 'manifests', 'simp_server.pp')).read }
