@@ -15,15 +15,8 @@ describe 'the grafana server' do
   before(:all) do
     default_hieradata = ERB.new(File.read(File.join(FIXTURE_DIR, 'hieradata', 'default.yaml.erb'))).result(binding)
     grafana_hieradata = ERB.new(File.read(File.join(FIXTURE_DIR, 'hieradata', 'grafana.yaml.erb'))).result(binding)
-
-    # NOTE: The `context` terminus is for per-context blocks.  If used, be sure
-    # it is filled with an empty YAML document (`---\n`) in the `after(:all)`
-    # hook for the context so it doesn't effect subsequent contexts.
-    write_hiera_config_on grafana, %W(context #{grafana_fqdn} default)
-
-    write_hieradata_to grafana, default_hieradata, 'default'
-    write_hieradata_to grafana, grafana_hieradata, grafana_fqdn
-    write_hieradata_to grafana, "---\n", 'context'
+    data = YAML.load(default_hieradata).merge(YAML.load(grafana_hieradata))
+    write_hieradata_to(grafana, data)
 
     # This would normally be required on the Puppet compile masters.
     if grafana[:type] == 'aio'
@@ -184,8 +177,7 @@ describe 'the grafana server' do
 
   context 'with LDAP enabled via the global catalyst' do
     before(:all) do
-      context_hieradata = "---\nsimp_options::ldap: true"
-      write_hieradata_to grafana, context_hieradata, 'context'
+      write_hieradata_to(grafana, data.merge({'simp_options::ldap' => true}))
     end
     after(:all) { write_hieradata_to grafana, "---\n", 'context' }
     let(:manifest) do
