@@ -1,3 +1,6 @@
+* Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.6-0
+- Update badges and contribution guide URL in README.md
+
 * Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 1.0.6-0
 - Updated $app_pki_external_source to accept any string. This matches the
   functionality of pki::copy.
